# triocfd-gui

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/triogui/: main.ipynb  probes.py  scheme.py  test.py  upwind_simplified.data  widget_dict2.py
src/triogui/.ipynb_checkpoints/: main-checkpoint.ipynb
src/triogui/ui/: voila_main.py
src/triogui/ui/widgets/: __init__.py  bool_widget.py  dropdown_widget.py  final.py  float_widget.py  home.py  int_widget.py  list_widget.py  main_app.py  object.py  select_widget.py  start_from_zero.py  str_widget.py  test.py
src/triogui/ui/widgets/object_management/: associate_widget.py  coupled_problem_widget.py  dimension_widget.py  discretization_widget.py  discretize_widget.py  domain_widget.py  ecriture_lecture_special_widget.py  mailler_widget.py  mesh_widget.py  partition_widget.py  problem_widget.py  scatter_widget.py  scheme_widget.py  solve_widget.py
