[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "triogui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipyvuetify>=1.11.1",
    "jupyter>=1.1.1",
    "trioapi",
    "voila>=0.5.8",
]

[tool.uv.sources]
trioapi = { path = "../trioapi" }
