[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "triogui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipyfilechooser>=0.6.0",
    "ipyvuetify>=1.11.1",
    "jupyter>=1.1.1",
    "pyperclip>=1.9.0",
    "trioapi",
    "voila>=0.5.8",
]

[project.gui-scripts]
triogui = "triogui.ui.voila_main:voila"

[tool.uv.sources]
trioapi = { path = "../triocfd-api" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.2",
]
